# drug-pipeline-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_tscan_report.py  catalym-gdf15-landscape-2026.html  demo-report-nsclc-2026.html  docker-compose.yml  drug_pipeline_cli.py  fact-check-heidelberg.md  heidelberg-pharma-adc-landscape-2026-v2.html  heidelberg-pharma-adc-landscape-2026.html  heidelberg-v3-report.html  immatics-report.py  immatics-tcr-landscape-2026.html  molecular-partners-darpin-landscape-2026.html  molecular-partners-kurzanalyse.html  molecular-partners-vollreport.html  pentixapharm-kurzanalyse-en.html  pentixapharm-kurzanalyse.html  pentixapharm-vollreport-en.html  pentixapharm-vollreport.html  pyproject.toml  send-to-liu-v3.txt  server.json  smithery.json  start_http.py  tscan-report-v1.md  tubulis-adc-conjugation-2026.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: local-regulation-2026.md
drug_pipeline/: __init__.py  _sources_composite.py  _sources_ctgov.py  _sources_ema.py  _sources_fda.py  _sources_pubmed.py  _sources_registry.py  server.py  sources.py
scripts/: external_sources_smoke_test.py  pipeline-data-product.py
tests/: __init__.py  conftest.py  test_server.py  test_sources.py
