[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drug-pipeline-mcp"
version = "0.1.0"
description = "Pharmaceutical R&D Pipeline Intelligence for AI Agents — clinical trials, FDA approvals, drug info & publications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DasClown"},
]
keywords = ["mcp", "pharma", "clinical-trials", "fda", "drug-development", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = [
    "mcp[httpx]>=1.0.0",
    "starlette>=0.37",
    "uvicorn>=0.27",
]

[project.scripts]
drug-pipeline = "drug_pipeline_cli:main"

[tool.setuptools]
packages = ["drug_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
